# llamadroid

./: .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/suhel/mycoolllama/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/suhel/mycoolllama/: App.kt  GlobalRouter.kt
app/src/main/java/com/suhel/mycoolllama/data/: GlobalState.kt  ModelsRepository.kt  RouterParams.kt
app/src/main/java/com/suhel/mycoolllama/extensions/: FlowExt.kt
app/src/main/java/com/suhel/mycoolllama/features/: Router.kt
app/src/main/java/com/suhel/mycoolllama/main/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/suhel/mycoolllama/screens/chat/: ChatInputField.kt  ChatMessages.kt  ChatScreen.kt  ChatScreenModels.kt  ChatScreenViewModel.kt
app/src/main/java/com/suhel/mycoolllama/screens/models/: ModelsRepository.kt  ModelsScreen.kt  ModelsViewModel.kt
app/src/main/java/com/suhel/mycoolllama/ui/theme/: Color.kt  ScreenScaffold.kt  Theme.kt  Type.kt
app/src/main/java/com/suhel/mycoolllama/usecases/: GeneratePromptCompletionUseCase.kt
app/src/main/res/drawable/: ic_clean.xml  ic_reset_sampler.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/suhel/mycoolllama/: ExampleUnitTest.kt
executorch/: build.gradle.kts
executorch/src/androidTest/java/com/suhel/executorch/: ExampleInstrumentedTest.kt
executorch/src/test/java/com/suhel/executorch/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  mcl-jni.cpp  mcl-log-ext.h  mcl-result.h
llama/src/main/java/com/suhel/llamacpp/: LlamaBridge.kt  LlamaContext.kt
llamacpp/: build.gradle.kts
llamacpp/src/androidTest/java/com/suhel/llamacpp/: ExampleInstrumentedTest.kt
llamacpp/src/main/cpp/: CMakeLists.txt  llama-bridge.cpp  llama-completion.cpp  llama-completion.h  llama-result.h  llama-session.cpp  llama-session.h  log-ext.h
llamacpp/src/main/cpp/ext/: llama-cpp-ext.h  log-ext.h
llamacpp/src/main/java/com/suhel/llamacpp/: LlamaBridge.kt  LlamaCompletion.kt  LlamaModel.kt
llamacpp/src/test/java/com/suhel/llamacpp/: ExampleUnitTest.kt
mycoolllama/: build.gradle.kts
mycoolllama/src/main/cpp/: CMakeLists.txt  mcl-context.cpp  mcl-context.h  mcl-jni.cpp
mycoolllama/src/main/java/com/suhel/llamacpp/: LlamaModel.kt
